# sorbonne_mimo_data_project

./: .gitignore  QUESTIONS.md  README.md  pyproject.toml  workspace.yaml
data_project/: main.py
data_project/api/: get_data.py
data_project/core/: config.py  utils.py
data_project/core/analysis/: __init__.py  map.py
data_project/core/processing/: __init__.py  caract.py  join.py  lieux.py  main.py  usagers.py  vehicules.py
data_project/orchestration/: __init__.py  definitions.py
data_project/orchestration/defs/: assets.py  jobs.py
