[project]
name = "python-course-data-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.8",
    "dagster-dg-cli>=1.12.8",
    "dagster-webserver>=1.12.8",
    "folium>=0.20.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pandera>=0.18.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pylint>=4.0.4",
    "ruff>=0.14.10",
]

[package]
name = "data_project"
source = { path = "." }

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[tool.setuptools]
include-package-data = false
packages.find.include = ["data_project"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "data_project.orchestration"
registry_modules = [
    "data_project.orchestration.components.*",
]
